[gd_scene load_steps=10 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://hud.tscn" type="PackedScene" id=2]
[ext_resource path="res://camera.gd" type="Script" id=4]
[ext_resource path="res://sfx/thump.ogg" type="AudioStream" id=5]
[ext_resource path="res://pauseMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://rocketLauncher.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape" id=1]
radius = 0.136121
height = 0.48235

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.140293, 0.0241411, 0.143325 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.149935, 0.175878, 0.153435 )

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.044, 0 )
script = ExtResource( 1 )

[node name="BodyCollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, -2.8435e-12, 2.8435e-12, -1.62921e-07, 1, 0, -1, -1.62921e-07, -5.31674e-09, 0.361402, 0.016317 )
shape = SubResource( 1 )

[node name="FeetCollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.17545e-09, 0.0286393, 0.0250903 )
shape = SubResource( 2 )

[node name="RotationHelper" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0179583, 0 )

[node name="Camera" type="Camera" parent="RotationHelper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.622, -0.208 )
current = true
fov = 90.0
far = 180.0
script = ExtResource( 4 )

[node name="GrabPoint" type="Spatial" parent="RotationHelper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.535507, -0.355606 )

[node name="Area" type="Area" parent="RotationHelper/GrabPoint"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0676212, -0.0941276 )

[node name="CollisionShape" type="CollisionShape" parent="RotationHelper/GrabPoint/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0689779 )
shape = SubResource( 3 )

[node name="GrenadeTossPos" type="Spatial" parent="RotationHelper"]
transform = Transform( -0.992115, 0, -0.125333, -0.0493358, 0.919266, 0.390533, 0.115215, 0.393637, -0.912017, 0.194179, 0.506385, -0.558989 )

[node name="rocketLauncher" parent="RotationHelper" instance=ExtResource( 7 )]
transform = Transform( -0.394253, 0.00190835, -0.0506492, -0.00771115, 0.395956, 0.0421549, 0.0671177, 0.056701, -0.292673, 0.222815, 0.490464, -0.383382 )

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="PauseMenu" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Thump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Tween" type="Tween" parent="."]
